# YOLOv8

./: README.dataset.txt  README.roboflow.txt  align.py  colorizer.py  data.yaml  decimation.py  detect-from-image.py  detect.py  detection-web-camera.py  filters-combined.py  filters.py  hole.py  raw-frames.py  realsense-point.py  realsense-test.py  realsense-yolo-depth.py  realsense-yolo.py  spatial.py  temporal.py  train.py
.devcontainer/: devcontainer.json
camera_tests/.devcontainer/: Dockerfile
docker/: Dockerfile  docker-compose-gui.yml
log/: latest_build
mys/: args.yaml  events.out.tfevents.1731709214.9ebe2cb37ff8.1606.1  results.csv
object_coords/: CMakeLists.txt
object_coords/launch/: coords.launch.py
object_coords/src/: object_coords_publisher.cpp
runs/detect/yolov8n_custom/: args.yaml
test/labels/: 20241015_110729_jpg.rf.cca1effbbe1a13ecdac97e0a90933b16.txt  20241015_110735_jpg.rf.13d5eba3e92550a77a72da6a0057225b.txt  IMG_5560_jpeg.rf.dea86a75663823c78b046b097a8b75fb.txt  IMG_5564_jpeg.rf.5e6e23f1c3112be17c75818dd4b5ec9b.txt
train/: labels.cache
train/labels/: 20241015_110709_jpg.rf.62530447eaa9fac9a51e3fc9a679e5da.txt  20241015_110712_jpg.rf.509b8e2d8e517460b152346b378f4724.txt  20241015_110715_jpg.rf.5c2920faa0d52064b76d6fcf1541ad90.txt  20241015_110719_jpg.rf.31fd21a4b1fe9f48b7ae6fabaf54188c.txt  20241015_110722_jpg.rf.a9757814ee8438c710ff46f54376210e.txt  20241015_110724_jpg.rf.0dc1c6801db2e4561d0dd9efa4909137.txt  20241015_110732_jpg.rf.4d08f5532707f1959691d6346315aaea.txt  (+21 more)
valid/: labels.cache
yolo_object_detection/: setup.py
(+37 files in other folders)
